--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,460 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+body{
+  background-color: rgb(58, 91, 91);
+}
+@import "tailwindcss";
+body{
+  overflow-x: hidden;
+}
+.Polymorphism{
+  background:rgba(255,255,255,0.3);
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
+  border-radius: 14px;
+  border: 1px solid rgba(255,255,255,0.18);
+  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+  padding: 20px;
+}
+.container .left span{
+  line-height: 20px;
+  /* color: red; */
+}
+.web{
+  letter-spacing: 4px;
+}
+.container{
+  position: relative;
+}
+/* .container::after{
+  position: absolute;
+  content: '';
+  width: 100%;
+  height: 2%;
+  background-color: black;
+  bottom: 0;
+
+} */
+.big-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  
+  flex-direction: column;
+}
+.shadow{
+  box-shadow: 5px 5px 5px black;
+}
+.shadow2{
+  box-shadow: -5px -5px 5px black;
+}
+.shadow1{
+  box-shadow: 0px 0px 5px  black;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+
+.right1    .container{
+      display: flex;
+      flex-direction: column;
+      gap: 5px;
+      cursor: pointer;
+      position: relative;
+      /* border: 2px solid red; */
+    }
+    .right1 .first,.right1 .second,.right1 .third
+    {
+      background-color: black;
+      width: 30px;
+      height: 3px;
+/* transform-origin: top; */
+transition: all 0.4s ease-in-out;
+    }
+    .right1 .first{
+      position: relative;
+      left: 30%;
+      /* transform-origin: top; */
+      transform-style: preserve-3d;
+      transition: all 0.4s ease-in-out;
+      transform-origin: 0 0 ;
+      /* transform: rot; */
+      
+      
+    }
+    .myname{
+      font-family: cursive;
+    }
+    .first-skills:hover{
+      box-shadow: -5px -5px 5px black;
+      
+    }
+    .right1 .third{
+      position: relative;
+      left:  30%;
+      transform-origin: 0% 0%;
+    }
+
+    .myname1{
+      font-family: cursive;
+      /* animation: animate1 2s linear infinite; */
+      position: relative;
+    }
+    
+    .myname1::after{
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      margin-top: 3px;
+      width: 0%;
+      animation: animate1 2s linear infinite;
+      
+      height: 3px;
+      background-color: black;
+    }
+    @media (min-width:0px) and (max-width:600px){
+      @keyframes animate1{
+        25%{
+          width: 70%;
+        }
+        50%{
+        width: 70%;
+        
+      }
+      75%{
+        width: 70%;
+        
+      }
+      100%{
+        width: 0%;
+        
+      }
+    }
   }
+    @media (min-width:600px) and (max-width:100vw){
+      @keyframes animate1{
+        25%{
+          width: 48%;
+        }
+        50%{
+        width: 48%;
+        
+      }
+      75%{
+        width: 48%;
+        
+      }
+      100%{
+        width: 0%;
+        
+      }
+    }
+  }
+    /* } */
+    .css{
+      filter: drop-shadow(20px);
+    }
+    .html::after,.css::after,.tcss::after,.js::after,.node::after,.react::after,.mongo::after,.python::after,.cpp::after,.angular::after{
+      content: "90%";
+      font-size: 1rem;
+      color: white;
+      background-color: rgba(0,0,0,0.6);
+      backdrop-filter: 10px;
+    }
+
+    .react::after,.node::after,.mongo::after,.angular::after{
+      content: "80%";
+      font-size: 1rem;
+      color: white;
+      background-color: rgba(0,0,0,0.6);
+      backdrop-filter: 10px;
+    }
+    .python::after,.cpp::after{
+      content: "70%";
+      font-size: 1rem;
+      
+      color: white;
+      background-color: rgba(0,0,0,0.6);
+      backdrop-filter: 10px;
+    }
+    .cursor-animation{
+      transition: all 0.001s linear;
+      box-shadow: 0 0 1rem 0.3rem black;
+    }
+    @media (min-width:700px) and (max-width:100vw){
+      .home-container{
+  position: relative;
+  
+}
+.home-container::before{
+  content: '';
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 20%;
+  height: 30%;
+  border-top: 2px solid;
+  border-right: 2px solid;
+
+}
+.home-container::after{
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 20%;
+  height: 30%;
+  border-bottom: 2px solid;
+  border-left: 2px solid;
+
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+
+    }
+    /* .first_Project:hover{
+  box-shadow: 0px 0px 5px  black;
+
+    } */
+     .first_Project,.fp1,.fp2{
+      position: relative;
+      /* background-color: red; */
+     }
+     .first_Project::after,.fp2::after{
+      content: '';
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      background-color: black;
+      width: 30%;
+      height: 2px;
+     }
+     .fp1::after{
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      background-color: black;
+      width: 30%;
+      height: 2px;
+     }
+.right-img{
+      position: relative;
+      /* border:10px solid; */
+    }
+    .right-img:before{
+      content: '';
+      width: 40%;
+      animation:animate 5s linear infinite;
+      transition: all 0.3s ease-in-out;
+    
+      height: 40%;
+      position: absolute;
+      top: -30px;
+      left: -30px;
+      /* background-color: red; */
+      /* border:2px solid; */
+      border-top: 8px double;
+      border-left: 8px double;
+
+    }
+    .right-img::after{
+      content: '';
+      width: 40%;
+      transition: all 0.3s ease-in-out;
+    
+      height: 40%;
+      position: absolute;
+      bottom: -30px;
+      right: -30px;
+      /* background-color: red; */
+      /* border:2px solid; */
+      border-bottom: 8px double;
+      border-right: 8px double;
+      animation:animate 5s linear infinite;
+
+    }
+    
+    @keyframes animate{
+      0%{
+        width: 0;
+        height: 0;
+      }
+      50%{
+      width: 40%;
+        height: 40%;
+        /* border: 2px double; */
+        
+      }
+      75%{
+        width: 40%;
+        height: 40%;
+        /* border: 10px double; */
+
+      
+      }
+      100%{
+      width: 0%;
+        height: 0%;
+        
+      }
+    }
+    .download{
+      position: relative;
+      overflow: hidden;
+    }
+    .download::before{
+      content: '';
+      width: 100%;
+      z-index: -10;
+      transition: all 0.4s ease-in-out;
+      height: 100%;
+      position: absolute;
+      top: 100%;
+      left: 0;
+      border-radius: 23px;
+
+      background-color: black;
+    }
+    .download:hover::before{
+      top:0;
+      
+
+    }
+    .download:hover .download{
+      color: white;
+      border: 20px solid;
+
+
+    }
+.first:hover{
+
+  box-shadow: -5px -5px 5px black;
+
 }
+.skills,.cl{
+  position: relative;
+}
+.skills::before,.cl::before{
+  content: '';
+width: 100%;
+height: 100%;
+position: absolute;
+top: 0;
+left: 0;
+width: 20%;
+height: 40%;
+border-top: 2px solid;
+border-left: 2px solid;
+
+}
+.skills::after,.cl::after{
+  content: '';
+width: 100%;
+height: 100%;
+position: absolute;
+bottom: 0;
+right: -10px;
+width: 20%;
+height: 40%;
+border-right: 2px solid;
+border-bottom: 2px solid;
+
+}
+.right ul li{
+  position: relative;
+}
+.right ul li::before{
+  content: '';
+  width: 0%;
+  height: 100%;
+  transition: all 0.3s ease-in-out;
+  z-index: -10;
+
+  border-top: 2px solid;
+  /* border-bottom: 2px solid; */
+
+  position: absolute;
+  top: 0;
+  left: -10px;
+}
+.right ul li::after{
+  content: '';
+  width: 0%;
+  transition: all 0.3s ease-in-out;
+  height: 100%;
+  z-index: -10;
+  border-bottom: 2px solid;
+  /* border-bottom: 2px solid; */
+
+  position: absolute;
+  top: 0;
+  right: -10px;
+}
+.right ul li:hover::after{
+  width: 100%;
+}
+.right ul li:hover::before{
+  width: 100%;
+}
+
+::-webkit-scrollbar{
+  behavior: smooth;
+
+}
+
+
+    .glow-border {
+      position: relative;
+      width: 300px;
+      height: 300px;
+      border-radius: 20px;
+      background-color: #0a192f;
+      overflow: hidden;
+      z-index: 3;
+        /* filter: blur(10px); */
+
+    }
+
+    .glow-border::before {
+      content: '';
+      position: absolute;
+      top: -50%;
+      left: -50%;
+      
+      width: 200%;
+      height: 200%;
+      background: conic-gradient(
+        from 0deg,
+        #00f2fe,
+        #8a2be2,
+        #00f2fe,
+        #8a2be2,
+        #00f2fe,
+        );
+        animation: rotate 4s linear infinite;
+        /* backdrop-filter: 20px; */
+      z-index: -2;
+    }
+
+    .glow-border::after {
+      content: '';
+      position: absolute;
+      top: 5px;
+      left: 5px;
+      right: 5px;
+      bottom: 5px;
+      background: #0a192f;
+      border-radius: 15px;
+      /* filter: blur(100px); */
+      z-index: -1;
+    }
+
+    @keyframes rotate {
+      0% {
+        transform: rotate(0deg);
+      }
+      100% {
+        transform: rotate(360deg);
+      }
+    }
